Mise en place de la page d'Accueil.

--- a/html/Accueil.html
+++ b/html/Accueil.html
@@ -3,7 +3,12 @@
 
     </head>
     <body>
-        <p>Ceci est un test sur l'inclusion de la partie html</p>
+        <p>Voici le contenu de la page d'accueil chargé dynamiquement.</p>
+        <ul>
+          <li>Élément 1</li>
+          <li>Élément 2</li>
+          <li>Élément 3</li>
+        </ul>
     </body>
     <footer>
 
