--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
+<!DOCTYPE html>
 <html>
-    <head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Portfolio</title>
+  </head>
+  <body>
+    <header>
+      <h1>Bienvenue</h1>
+    </header>
 
-    </head>
-    <body>
-        <p>Ceci est un test sur l'inclusion de la partie html</p>
-    </body>
+    <div id="pageAccueil"></div>
     <footer>
-
+        
     </footer>
+    <script src="app.js"></script>
+  </body>
 </html>
