Correction des routes.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <div id="pageAccueil"></div>
     <footer>
-        
+
     </footer>
-    <script src="app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
