--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>Doriane Richard ~ Portfolio</title>
   </head>
   <body>
-    <header>
-      <h1>Bienvenue</h1>
-    </header>
 
-    <div id="pageAccueil"></div>
-    <footer>
+    <p>Menu</p>
 
-    </footer>
+    <div id="pageContact"></div>
+    <div id="pageProjetProfessionnel"></div>
+    <div id="pageProjetPersonnel"></div>
+    
     <script src="js/app.js"></script>
+    
   </body>
 </html>
