--- a/html/contact.html
+++ b/html/contact.html
@@ -1,5 +1,21 @@
 <html>
     <body>
         <p>Partie contact</p>
+        <form onsubmit="envoyerEmail(this.nom.value, this.email.value, this.message.value); return false;">
+            <div>
+              <label for="nom">Nom :</label>
+              <input type="text" id="nom" name="nom" required>
+            </div>
+            <div>
+              <label for="email">Email :</label>
+              <input type="email" id="email" name="email" required>
+            </div>
+            <div>
+              <label for="message">Message :</label>
+              <textarea id="message" name="message" required></textarea>
+            </div>
+            <button type="submit">Envoyer</button>
+          </form>          
     </body>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </html>
