Tentative de mise en place de l'envoi du mail

--- a/html/contact.html
+++ b/html/contact.html
@@ -1,6 +1,8 @@
 <html>
     <body>
         <p>Partie contact</p>
+        <br>
+        <p>Formulaire de contact</p>
         <form onsubmit="envoyerEmail(this.nom.value, this.email.value, this.message.value); return false;">
             <div>
               <label for="nom">Nom :</label>
@@ -17,5 +19,5 @@
             <button type="submit">Envoyer</button>
           </form>          
     </body>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    
 </html>
