--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="pageProjetPersonnel"></div>
     
     <script src="js/app.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     
   </body>
 </html>
