Modification de la partie contact, ajout d'un bouton pour envoyer un mail.

--- a/html/contact.html
+++ b/html/contact.html
@@ -2,7 +2,7 @@
     <body>
         <p>Partie contact</p>
         <br>
-        <p>Formulaire de contact</p>
+        <!-- <p>Formulaire de contact</p>
         <form onsubmit="envoyerEmail(this.nom.value, this.email.value, this.message.value); return false;">
             <div>
               <label for="nom">Nom :</label>
@@ -17,7 +17,8 @@
               <textarea id="message" name="message" required></textarea>
             </div>
             <button type="submit">Envoyer</button>
-          </form>          
+          </form>           -->
+          <a href="mailto:votreadresse@mail.fr">Contactez-moi !</a>
     </body>
     
 </html>
