Ajout d'un menu de navigation.

--- a/html/contact.html
+++ b/html/contact.html
@@ -1,24 +1,6 @@
 <html>
     <body>
-        <p>Partie contact</p>
-        <br>
-        <!-- <p>Formulaire de contact</p>
-        <form onsubmit="envoyerEmail(this.nom.value, this.email.value, this.message.value); return false;">
-            <div>
-              <label for="nom">Nom :</label>
-              <input type="text" id="nom" name="nom" required>
-            </div>
-            <div>
-              <label for="email">Email :</label>
-              <input type="email" id="email" name="email" required>
-            </div>
-            <div>
-              <label for="message">Message :</label>
-              <textarea id="message" name="message" required></textarea>
-            </div>
-            <button type="submit">Envoyer</button>
-          </form>           -->
-          <a href="mailto:votreadresse@mail.fr">Contactez-moi !</a>
+        <p>Télephone: 0000000000</p>
+        <a href="mailto:doriane.richard08@gmail.com">Contactez-moi !</a>
     </body>
-    
 </html>
