--- a/html/projetProfessionnel.html
+++ b/html/projetProfessionnel.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <p>Partie projets Professionnels</p>
+        <p>Faire la liste de tous les projets personnels</p>
     </body>
 </html>
