--- a/html/projetPersonnel.html
+++ b/html/projetPersonnel.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <p>Partie Projets Personnels</p>
+        <p>Faire la liste de tout mes projets personnels</p>
     </body>
 </html>
