--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <body>
     <header>
       <p>Doriane Richard</p>
-      <a href="html/index.html">Accueil</a>
-      <a href="html/contact.html">A propos</a>
-      <a href="html/contact.html">Portfolio</a>
-      <a href="html/contact.html">Projet personnel</a>
-      <a href="html/contact.html">Contact</a>
+      <nav>
+        <a href="index.html">Accueil</a>
+        <a href="html/biographie.html">A propos</a>
+        <a href="html/projetProfessionnel.html">Portfolio</a>
+        <a href="html/projetPersonnel.html">Projet personnel</a>
+        <a href="html/contact.html">Contact</a>
+      </nav>
     </header>
 
     <p>L'art de créer ce qu'il nous plaît</p>
@@ -19,12 +21,12 @@
     <!-- <div id="pageContact"></div>
     <div id="pageProjetProfessionnel"></div>
     <div id="pageProjetPersonnel"></div> -->
-    <footer>
-      <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
-      <p>© 2024 par Doriane Richard</p>
-    </footer>
     <script src="js/app.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     
   </body>
+  <footer>
+    <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
+    <p>© 2024 par Doriane Richard</p>
+  </footer>
 </html>
