Mise à jour du menu.

--- a/html/projetProfessionnel.html
+++ b/html/projetProfessionnel.html
@@ -1,5 +1,11 @@
 <html>
     <body>
+        <header>
+            <div id="enTete"></div>
+        </header>
         <p>Faire la liste de tous les projets personnels</p>
     </body>
+    <footer>
+        <div id="basDePage"></div>
+    </footer>
 </html>
