--- a/html/projetPersonnel.html
+++ b/html/projetPersonnel.html
@@ -1,5 +1,11 @@
 <html>
     <body>
+        <header>
+            <div id="enTete"></div>
+        </header>
         <p>Faire la liste de tout mes projets personnels</p>
     </body>
+    <footer>
+        <div id="basDePage"></div>
+      </footer>
 </html>
