--- a/index.html
+++ b/index.html
@@ -6,16 +6,8 @@
   </head>
   <body>
     <header>
-      <p>Doriane Richard</p>
-      <nav>
-        <a href="index.html">Accueil</a>
-        <a href="html/biographie.html">A propos</a>
-        <a href="html/projetProfessionnel.html">Portfolio</a>
-        <a href="html/projetPersonnel.html">Projet personnel</a>
-        <a href="html/contact.html">Contact</a>
-      </nav>
+      <div id="enTete"></div>
     </header>
-
     <p>L'art de créer ce qu'il nous plaît</p>
 
     <!-- <div id="pageContact"></div>
@@ -26,7 +18,6 @@
     
   </body>
   <footer>
-    <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
-    <p>© 2024 par Doriane Richard</p>
+    <div id="basDePage"></div>
   </footer>
 </html>
