Misa à jour de la navigation de la page.

--- a/html/basDePage.html
+++ b/html/basDePage.html
@@ -1,2 +1,4 @@
-<a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
-<p>© 2024 par Doriane Richard</p>
+<footer>
+    <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
+    <p>© 2024 par Doriane Richard</p>
+</footer>
