Test pour la navigation.

--- a/html/contact.html
+++ b/html/contact.html
@@ -1,8 +1,20 @@
 <html>
     <body>
-        <div id="enTete"></div>
+        <header>
+            <p>Doriane Richard</p>
+            <nav>
+                <a href="index.html">Accueil</a>
+                <a href="html/biographie.html">A propos</a>
+                <a href="html/projetProfessionnel.html">Portfolio</a>
+                <a href="html/projetPersonnel.html">Projet personnel</a>
+                <a href="html/contact.html">Contact</a>
+            </nav>
+        </header>
         <p>Télephone: 0000000000</p>
         <a href="mailto:doriane.richard08@gmail.com">Contactez-moi !</a>
     </body>
-    <div id="basDePage"></div>
+    <footer>
+        <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
+        <p>© 2024 par Doriane Richard</p>
+    </footer>
 </html>
