--- a/html/projetPersonnel.html
+++ b/html/projetPersonnel.html
@@ -1,7 +1,20 @@
 <html>
     <body>
-            <div id="enTete"></div>
+        <header>
+            <p>Doriane Richard</p>
+            <nav>
+                <a href="index.html">Accueil</a>
+                <a href="html/biographie.html">A propos</a>
+                <a href="html/projetProfessionnel.html">Portfolio</a>
+                <a href="html/projetPersonnel.html">Projet personnel</a>
+                <a href="html/contact.html">Contact</a>
+            </nav>
+        </header>
+
         <p>Faire la liste de tout mes projets personnels</p>
     </body>
-        <div id="basDePage"></div>
+    <footer>
+        <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
+        <p>© 2024 par Doriane Richard</p>
+    </footer>
 </html>
