--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <title>Doriane Richard ~ Portfolio</title>
   </head>
   <body>
-    <div id="enTete"></div>
+    <header>
+      <p>Doriane Richard</p>
+      <nav>
+        <a href="index.html">Accueil</a>
+        <a href="html/biographie.html">A propos</a>
+        <a href="html/projetProfessionnel.html">Portfolio</a>
+        <a href="html/projetPersonnel.html">Projet personnel</a>
+        <a href="html/contact.html">Contact</a>
+      </nav>
+    </header>
+
     <p>L'art de créer ce qu'il nous plaît</p>
 
     <!-- <div id="pageContact"></div>
@@ -13,6 +23,10 @@
     <div id="pageProjetPersonnel"></div> -->
     <script src="js/app.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    
   </body>
-    <div id="basDePage"></div>
+  <footer>
+    <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
+    <p>© 2024 par Doriane Richard</p>
+  </footer>
 </html>
