--- a/html/biographie.html
+++ b/html/biographie.html
@@ -1,1 +1,15 @@
+<header>
+    <p>Doriane Richard</p>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="html/biographie.html">A propos</a>
+        <a href="html/projetProfessionnel.html">Portfolio</a>
+        <a href="html/projetPersonnel.html">Projet personnel</a>
+        <a href="html/contact.html">Contact</a>
+    </nav>
+</header>
 <p>c'est la biographie</p>
+<footer>
+    <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
+    <p>© 2024 par Doriane Richard</p>
+</footer>
