Correction des chemins pour naviguer entre les pages

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <header>
       <p>Doriane Richard</p>
       <nav>
-        <a href="index.html">Accueil</a>
-        <a href="html/biographie.html">A propos</a>
-        <a href="html/projetProfessionnel.html">Portfolio</a>
-        <a href="html/projetPersonnel.html">Projet personnel</a>
-        <a href="html/contact.html">Contact</a>
+        <a href="/index.html">Accueil</a>
+        <a href="/html/biographie.html">A propos</a>
+        <a href="/html/projetProfessionnel.html">Portfolio</a>
+        <a href="/html/projetPersonnel.html">Projet personnel</a>
+        <a href="/html/contact.html">Contact</a>
       </nav>
     </header>
 
