--- a/html/enTete.html
+++ b/html/enTete.html
@@ -1,15 +1,11 @@
 
-<html>
-    <body>
-        <header>
-            <p>Doriane Richard</p>
-            <nav>
-                <a href="index.html">Accueil</a>
-                <a href="html/biographie.html">A propos</a>
-                <a href="html/projetProfessionnel.html">Portfolio</a>
-                <a href="html/projetPersonnel.html">Projet personnel</a>
-                <a href="html/contact.html">Contact</a>
-            </nav>
-        </header>
-    </body>
-</html>
+<header>
+    <p>Doriane Richard</p>
+    <nav>
+        <a href="../index.html">Accueil</a>
+        <a href="../html/biographie.html">A propos</a>
+        <a href="../html/projetProfessionnel.html">Portfolio</a>
+        <a href="../html/projetPersonnel.html">Projet personnel</a>
+        <a href="../html/contact.html">Contact</a>
+    </nav>
+</header>
