--- a/index.html
+++ b/index.html
@@ -5,16 +5,29 @@
     <title>Doriane Richard ~ Portfolio</title>
   </head>
   <body>
-    <header>
-      <p>Doriane Richard</p>
-      <nav>
-        <a href="/index.html">Accueil</a>
-        <a href="/html/biographie.html">A propos</a>
-        <a href="/html/projetProfessionnel.html">Portfolio</a>
-        <a href="/html/projetPersonnel.html">Projet personnel</a>
-        <a href="/html/contact.html">Contact</a>
-      </nav>
-    </header>
+    <div class="container">
+      <header>
+        <p>Doriane Richard</p>
+        <nav>
+          <ul>
+            <a href="index.html">Accueil</a>
+          </ul>
+          <ul>
+            <a href="html/biographie.html">A propos</a>
+          </ul>
+          <ul>
+            <a href="html/projetProfessionnel.html">Portfolio</a>            
+          </ul>
+          <ul>
+            <a href="html/projetPersonnel.html">Projet personnel</a>
+          </ul>
+          <ul>            
+            <a href="html/contact.html">Contact</a>
+          </ul>
+        </nav>
+      </header>
+    </div>
+   
 
     <p>L'art de créer ce qu'il nous plaît</p>
 
@@ -23,6 +36,7 @@
     <div id="pageProjetPersonnel"></div> -->
     <script src="js/app.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="css/accueil.css"></script>
     
   </body>
   <footer>
