--- a/html/biographie.html
+++ b/html/biographie.html
@@ -1,6 +1,12 @@
-<header>
-    <p>Doriane Richard</p>
-    <nav>
+<head>
+    <meta charset="UTF-8">
+    <title>Doriane Richard ~ Portfolio</title>
+    <link rel="stylesheet" href="../css/accueil.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+</head>
+<header class="header">
+    <p class="logo">Doriane Richard</p>
+    <nav class="navbar">
         <a href="../index.html">Accueil</a>
         <a href="../html/biographie.html">A propos</a>
         <a href="../html/projetProfessionnel.html">Portfolio</a>
@@ -8,8 +14,8 @@
         <a href="../html/contact.html">Contact</a>
     </nav>
 </header>
-<p>c'est la biographie</p>
-<footer>
-    <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
-    <p>© 2024 par Doriane Richard</p>
-</footer>
+<section class="home">
+    <div class="home-content">
+      <p>En cours de développement...</p>
+    </div>
+</section>
