--- a/html/contact.html
+++ b/html/contact.html
@@ -1,20 +1,25 @@
-<html>
-    <body>
-        <header>
-            <p>Doriane Richard</p>
-            <nav>
-                <a href="../index.html">Accueil</a>
-                <a href="../html/biographie.html">A propos</a>
-                <a href="../html/projetProfessionnel.html">Portfolio</a>
-                <a href="../html/projetPersonnel.html">Projet personnel</a>
-                <a href="../html/contact.html">Contact</a>
-            </nav>
-        </header>
-        <p>Télephone: 0000000000</p>
-        <a href="mailto:doriane.richard08@gmail.com">Contactez-moi !</a>
-    </body>
-    <footer>
-        <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
-        <p>© 2024 par Doriane Richard</p>
-    </footer>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <title>Doriane Richard ~ Portfolio</title>
+    <link rel="stylesheet" href="../css/accueil.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+</head>
+<header class="header">
+    <p class="logo">Doriane Richard</p>
+    <nav class="navbar">
+        <a href="../index.html">Accueil</a>
+        <a href="../html/biographie.html">A propos</a>
+        <a href="../html/projetProfessionnel.html">Portfolio</a>
+        <a href="../html/projetPersonnel.html">Projet personnel</a>
+        <a href="../html/contact.html">Contact</a>
+    </nav>
+</header>
+
+<section class="home">
+    <div class="home-content">
+      <p>En cours de développement...</p>
+      <br>
+      <p>Télephone: 0000000000</p>
+      <a href="mailto:doriane.richard08@gmail.com">Contactez-moi !</a>
+    </div>
+</section>
