--- a/index.html
+++ b/index.html
@@ -4,51 +4,42 @@
     <meta charset="UTF-8">
     <title>Doriane Richard ~ Portfolio</title>
     <link rel="stylesheet" href="css/accueil.css">
+    <link rel="stylesheet" href="css/barreNavigation.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
+    <!-- Barre de navigation -->
     <header class="header">
-      <p class="logo">Doriane Richard</p>
       <nav class="navbar">
-        <a href="index.html" class="active">Accueil</a>
+        <a href="index.html">Accueil</a>
         <a href="html/biographie.html">A propos</a>
-        <a href="html/projetProfessionnel.html">Portfolio</a>
+        <a href="html/projetProfessionnel.html">Projet professionnel</a>
         <a href="html/projetPersonnel.html">Projet personnel</a>
         <a href="html/contact.html">Contact</a>
+        <a href="html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
       </nav>
     </header>
-
+    <br>
+    <!-- Corps de la page -->
     <section class="home">
+      <!-- Présentation -->
       <div class="home-content">
-        <h1>Salut, Je m'appelle Doriane Richard</h1>
-        <h3>Frontend Developer</h3>
-        <p>L'art de créer ce qu'il nous plaît.
+        <h1>Doriane Richard</h1>
+        <h3>Software Design Technician, alias développeuse front-end</h3>
+        <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
           Duis quis vestibulum urna, nec lobortis nulla. Suspendisse laoreet 
           vel eros a tempus. Proin metus nibh, ultricies non semper id, iaculis pretium nisi. 
           Praesent varius orci sit amet hendrerit pulvinar. Nunc enim odio, tempus tristique mauris ac, 
           malesuada feugiat neque. Praesent feugiat iaculis laoreet. 
         </p>
-        <div class="btn-box">
-          <a href="#">Découvrir mes projets</a>
-          <a href="#">En apprendre plus sur mes créations</a>
+      </div>
+      <!-- Portrait -->
+      <div  class="home-content">
+        <div id="portrait">
+          <img src="images/portraitDorianeRichard.jpg">
         </div>
       </div>
-      <div class="home-sci">
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
-      </div>
     </section>
-    
-
-    <!-- <div id="pageContact"></div>
-    <div id="pageProjetProfessionnel"></div>
-    <div id="pageProjetPersonnel"></div> -->
-    <script src="js/app.js"></script>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    
   </body>
-  <!-- <footer>
-    <a href="https://www.linkedin.com/in/doriane-richard-313192207/">Lien Linkedin</a>
-    <p>© 2024 par Doriane Richard</p>
-  </footer> -->
 </html>
