Ajout de la classe "active" au lien accueil et ajout du portrait.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Barre de navigation -->
     <header class="header">
       <nav class="navbar">
-        <a href="index.html">Accueil</a>
+        <a href="index.html" class="active">Accueil</a>
         <a href="html/biographie.html">A propos</a>
         <a href="html/projetProfessionnel.html">Projet professionnel</a>
         <a href="html/projetPersonnel.html">Projet personnel</a>
