Création de la page "A propos".

--- a/html/biographie.html
+++ b/html/biographie.html
@@ -1,21 +1,77 @@
 <head>
     <meta charset="UTF-8">
     <title>Doriane Richard ~ Portfolio</title>
-    <link rel="stylesheet" href="../css/accueil.css">
+    <link rel="stylesheet" href="../css/biographie.css">
+    <link rel="stylesheet" href="../css/barreNavigation.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<header class="header">
-    <p class="logo">Doriane Richard</p>
-    <nav class="navbar">
-        <a href="../index.html">Accueil</a>
-        <a href="../html/biographie.html">A propos</a>
-        <a href="../html/projetProfessionnel.html">Portfolio</a>
-        <a href="../html/projetPersonnel.html">Projet personnel</a>
-        <a href="../html/contact.html">Contact</a>
-    </nav>
-</header>
-<section class="home">
-    <div class="home-content">
-      <p>En cours de développement...</p>
-    </div>
-</section>
+<body>
+    <!-- Barre de navigation -->
+    <header class="header">
+        <nav class="navbar">
+            <a href="../index.html">Accueil</a>
+            <a href="../html/biographie.html">À propos</a>
+            <a href="../html/projetProfessionnel.html">Projet professionnel</a>
+            <a href="../html/projetPersonnel.html">Projet personnel</a>
+            <a href="../html/contact.html">Contact</a>
+            <a href="../html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
+        </nav>
+    </header>
+    <!-- Corps de la page -->
+    <section class="section-container space-with-navbar">
+        <!-- Présentation -->
+        <div class="presentation-box">
+            <div class="image-container">
+                <img src="../images/portraitDorianeRichard.jpg">
+            </div>
+            <div class="biography-container">
+                <p>Morbi vel ante feugiat, aliquam nisl id, pharetra felis. Ut nec dui ultrices, pellentesque est at, eleifend nunc. Sed tempus sem nec tincidunt dictum. Duis accumsan odio ut urna tristique condimentum. Ut maximus erat velit, vitae luctus ligula faucibus porttitor. Nullam convallis neque quam. Fusce quis consequat tortor. Nam mollis dui elit, id euismod nulla vestibulum ac. Nam interdum dignissim ligula non sollicitudin. Nullam quis tellus et arcu ultrices rhoncus. Sed semper, felis sed mollis ultricies, massa lectus pellentesque mauris, vel iaculis orci ligula non velit. Vestibulum condimentum leo blandit ultrices vehicula.</p>
+            </div>
+        </div>
+    </section>
+    <section class="section-container">
+        <!-- Formations -->
+        <div class="content-box">
+            <h2>Formations</h2>
+            <ul class="timeline">
+                <li>
+                    <h3>BUT informatique parcours réalisation d'application : développement, conception, validation</h3>
+                    <span>UGA - IUT 2, 2023-2024</span>
+                    <p>TODO : Ajouter une description</p>
+                </li>
+                <li>
+                    <h3>BTS systèmes numériques option informatique et réseaux</h3>
+                    <span>Lycée du Grésivaudan Meylan, 2021-2023</span>
+                    <p>TODO : Ajouter une description</p>
+                </li>
+                <li>
+                    <h3>Bac sciences et techniques de l'industrie et du développement durable</h3>
+                    <span>Lycée du Grésivaudan Meylan, 2021-2023</span>
+                    <p>TODO : Ajouter une description</p>
+                </li>
+            </ul>
+        </div>
+        <!-- Expériences professionnelles -->
+        <div class="content-box">
+            <h2>Expériences professionnelles</h2>
+            <ul class="timeline">
+                <li>
+                    <h3>Alternante Software Design Technician</h3>
+                    <span>Schneider Electric, 2023-2024</span>
+                    <p>TODO : Ajouter une description + durée</p>
+                </li>
+                <li>
+                    <h3>Alternante en informatique industrielle et cybersécurité</h3>
+                    <span>Schneider Electric, 2021-2023</span>
+                    <p>TODO : Ajouter une description + durée</p>
+                </li>
+                <li>
+                    <h3>Employé de restaurant</h3>
+                    <span>Crescendo, 2021</span>
+                    <p>TODO : Ajouter une description + durée</p>
+                </li>
+            </ul>
+        </div>
+    </section>    
+    <script src="../js/app.js"></script>
+</body>
