Création de la page "Projets personnels".

--- a/html/projetPersonnel.html
+++ b/html/projetPersonnel.html
@@ -1,21 +1,73 @@
 <head>
     <meta charset="UTF-8">
     <title>Doriane Richard ~ Portfolio</title>
-    <link rel="stylesheet" href="../css/accueil.css">
+    <link rel="stylesheet" href="../css/barreNavigation.css">
+    <link rel="stylesheet" href="../css/projetsPersonnels.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<header class="header">
-    <p class="logo">Doriane Richard</p>
-    <nav class="navbar">
-        <a href="../index.html">Accueil</a>
-        <a href="../html/biographie.html">A propos</a>
-        <a href="../html/projetProfessionnel.html">Portfolio</a>
-        <a href="../html/projetPersonnel.html">Projet personnel</a>
-        <a href="../html/contact.html">Contact</a>
-    </nav>
-</header>
-<section class="home">
-    <div class="home-content">
-      <p>En cours de développement...</p>
+<body>
+    <!-- Barre de navigation -->
+    <header class="header">
+        <nav class="navbar">
+            <a href="../index.html">Accueil</a>
+            <a href="../html/biographie.html">À propos</a>
+            <a href="../html/projetProfessionnel.html">Projet professionnel</a>
+            <a href="../html/projetPersonnel.html">Projet personnel</a>
+            <a href="../html/contact.html">Contact</a>
+            <a href="../html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
+        </nav>
+    </header>
+    <!-- Corps de la page -->
+    <div id="presentation-content" class="space-with-navbar">
+        <h1 class="">Présentation de mes projets personnels</h1>
+        <!-- La taverne de bacchus -->
+        <section class="container">
+            <div class="photos">
+                <div class="photo photo1"></div>
+                <div class="photo photo2"></div>
+            </div>
+            <div class="photo photo3"></div>
+            <div class="content">
+                <h1>La taverne de Bacchus</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae arcu id ultricies. Donec porttitor fringilla accumsan. Maecenas quis consectetur elit. Duis sit amet nulla in arcu tincidunt dictum lacinia eget nisl. Aliquam non suscipit ante. Nullam odio dui, scelerisque non tristique in, auctor sollicitudin magna. Nunc posuere viverra laoreet. Nam urna nisl, dignissim quis sem vitae, venenatis pretium justo. Curabitur non lacus mollis tortor viverra tempus. Nullam in pharetra leo. Etiam placerat ante in velit egestas vestibulum. Quisque eget finibus ante.</p>
+            </div>
+        </section>
+        <!-- Warhammer -->
+        <section class="container">
+            <div class="content">
+                <h1>Warhammer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae arcu id ultricies. Donec porttitor fringilla accumsan. Maecenas quis consectetur elit. Duis sit amet nulla in arcu tincidunt dictum lacinia eget nisl. Aliquam non suscipit ante. Nullam odio dui, scelerisque non tristique in, auctor sollicitudin magna. Nunc posuere viverra laoreet. Nam urna nisl, dignissim quis sem vitae, venenatis pretium justo. Curabitur non lacus mollis tortor viverra tempus. Nullam in pharetra leo. Etiam placerat ante in velit egestas vestibulum. Quisque eget finibus ante.</p>
+            </div>
+            <img src="../images/nainDeLespace.jpg" class="photo photo3-right">
+            <div class="photos">
+                <img src="../images/capeBlancheNeige.jpg" class="photo photo1">
+                <img src="../images/patrouille.jpg" class="photo photo2-right">
+            </div>
+        </section>
+        <!-- Parade vénitienne -->
+        <section class="container">
+            <div class="photos">
+                <img src="../images/patron.jpeg" class="photo photo1">
+                <img src="../images/venitienCouple.jpeg" class="photo photo2">
+            </div>
+            <img src="../images/mannequinChateau.jpg" class="photo photo3">
+            <div class="content">
+                <h1>Parade vénitienne</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae arcu id ultricies. Donec porttitor fringilla accumsan. Maecenas quis consectetur elit. Duis sit amet nulla in arcu tincidunt dictum lacinia eget nisl. Aliquam non suscipit ante. Nullam odio dui, scelerisque non tristique in, auctor sollicitudin magna. Nunc posuere viverra laoreet. Nam urna nisl, dignissim quis sem vitae, venenatis pretium justo. Curabitur non lacus mollis tortor viverra tempus. Nullam in pharetra leo. Etiam placerat ante in velit egestas vestibulum. Quisque eget finibus ante.</p>
+            </div>
+        </section>
+        <!-- Photographie -->
+        <section class="container">
+            <div class="content">
+                <h1>Photographie</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae arcu id ultricies. Donec porttitor fringilla accumsan. Maecenas quis consectetur elit. Duis sit amet nulla in arcu tincidunt dictum lacinia eget nisl. Aliquam non suscipit ante. Nullam odio dui, scelerisque non tristique in, auctor sollicitudin magna. Nunc posuere viverra laoreet. Nam urna nisl, dignissim quis sem vitae, venenatis pretium justo. Curabitur non lacus mollis tortor viverra tempus. Nullam in pharetra leo. Etiam placerat ante in velit egestas vestibulum. Quisque eget finibus ante.</p>
+            </div>
+            <img src="../images/lezard.JPG" class="photo photo3-right">
+            <div class="photos">
+                <img src="../images/montagne.JPG" class="photo photo1">
+                <img src="../images/jongleurFlamme.JPG" class="photo photo2-right">
+            </div>
+        </section>
     </div>
-</section>
+    <script src="../js/app.js"></script>
+</body>
