Création de la page "Contact". Quelles lègères modifications dans les autres fichiers.

--- a/html/contact.html
+++ b/html/contact.html
@@ -1,25 +1,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Doriane Richard ~ Portfolio</title>
-    <link rel="stylesheet" href="../css/accueil.css">
+    <link rel="stylesheet" href="../css/barreNavigation.css">
+    <link rel="stylesheet" href="../css/contact.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<header class="header">
-    <p class="logo">Doriane Richard</p>
-    <nav class="navbar">
-        <a href="../index.html">Accueil</a>
-        <a href="../html/biographie.html">A propos</a>
-        <a href="../html/projetProfessionnel.html">Portfolio</a>
-        <a href="../html/projetPersonnel.html">Projet personnel</a>
-        <a href="../html/contact.html">Contact</a>
-    </nav>
-</header>
-
-<section class="home">
-    <div class="home-content">
-      <p>En cours de développement...</p>
-      <br>
-      <p>Télephone: 0000000000</p>
-      <a href="mailto:doriane.richard08@gmail.com">Contactez-moi !</a>
-    </div>
-</section>
+<body>
+    <!-- Barre de navigation -->
+    <header class="header">
+        <nav class="navbar">
+            <a href="../index.html">Accueil</a>
+            <a href="../html/biographie.html">À propos</a>
+            <a href="../html/projetProfessionnel.html">Projet professionnel</a>
+            <a href="../html/projetPersonnel.html">Projet personnel</a>
+            <a href="../html/contact.html">Contact</a>
+            <a href="../html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
+        </nav>
+    </header>
+    <!-- Corps de la page -->
+    <section class="section-container contact-section  space-with-navbar">
+        <div class="contact-content">
+            <!-- Illustration -->
+            <div class="contact-image">
+                <img src="../images/immeuble.jpg" alt="Image de contact">
+            </div>
+            <!-- Informations -->
+            <div class="contact-info">
+                <h1>Me Contacter</h1>
+                <p>Besoin de me contacter ?</p>
+                <p>Je suis à votre disposition pour toute question, projet ou collaboration.</p>
+                <ul>
+                    <li><i class='bx bxs-phone'></i> +33 7 82 88 63 35</li>
+                    <li><a href="doriane.richard08@gmail.com"><i class='bx bxs-envelope'></i>doriane.richard08@gmail.com</li></a>
+                    <li><a href="https://www.linkedin.com/in/doriane-richard-313192207/"><i class="bx bxl-linkedin"></i>Doriane Richard</li></a>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <script src="../js/app.js"></script>
+</body>
