--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <br>
     <!-- Corps de la page -->
-    <section class="home">
+    <section class="home space-with-navbar">
       <!-- Présentation -->
       <div class="home-content">
         <h1>Doriane Richard</h1>
