Modification de la taille de la page avant modification.

--- a/html/projetPersonnel.html
+++ b/html/projetPersonnel.html
@@ -22,11 +22,13 @@
         <h1 class="">Présentation de mes projets personnels</h1>
         <!-- La taverne de bacchus -->
         <section class="container">
-            <div class="photos">
-                <div class="photo photo1"></div>
-                <div class="photo photo2"></div>
+            <div class="photos-container">
+                <div class="photos">
+                    <div class="photo photo1"></div>
+                    <div class="photo photo2"></div>
+                </div>
+                <div class="photo photo3"></div>
             </div>
-            <div class="photo photo3"></div>
             <div class="content">
                 <h1>La taverne de Bacchus</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae arcu id ultricies. Donec porttitor fringilla accumsan. Maecenas quis consectetur elit. Duis sit amet nulla in arcu tincidunt dictum lacinia eget nisl. Aliquam non suscipit ante. Nullam odio dui, scelerisque non tristique in, auctor sollicitudin magna. Nunc posuere viverra laoreet. Nam urna nisl, dignissim quis sem vitae, venenatis pretium justo. Curabitur non lacus mollis tortor viverra tempus. Nullam in pharetra leo. Etiam placerat ante in velit egestas vestibulum. Quisque eget finibus ante.</p>
@@ -38,19 +40,23 @@
                 <h1>Warhammer</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae arcu id ultricies. Donec porttitor fringilla accumsan. Maecenas quis consectetur elit. Duis sit amet nulla in arcu tincidunt dictum lacinia eget nisl. Aliquam non suscipit ante. Nullam odio dui, scelerisque non tristique in, auctor sollicitudin magna. Nunc posuere viverra laoreet. Nam urna nisl, dignissim quis sem vitae, venenatis pretium justo. Curabitur non lacus mollis tortor viverra tempus. Nullam in pharetra leo. Etiam placerat ante in velit egestas vestibulum. Quisque eget finibus ante.</p>
             </div>
-            <img src="../images/nainDeLespace.jpg" class="photo photo3-right">
-            <div class="photos">
-                <img src="../images/capeBlancheNeige.jpg" class="photo photo1">
-                <img src="../images/patrouille.jpg" class="photo photo2-right">
+            <div class="photos-container">
+                <img src="../images/nainDeLespace.jpg" class="photo photo3-right">
+                <div class="photos">
+                    <img src="../images/capeBlancheNeige.jpg" class="photo photo1">
+                    <img src="../images/patrouille.jpg" class="photo photo2-right">
+                </div>
             </div>
         </section>
         <!-- Parade vénitienne -->
         <section class="container">
-            <div class="photos">
-                <img src="../images/patron.jpeg" class="photo photo1">
-                <img src="../images/venitienCouple.jpeg" class="photo photo2">
+            <div class="photos-container">
+                <div class="photos">
+                    <img src="../images/patron.jpeg" class="photo photo1">
+                    <img src="../images/venitienCouple.jpeg" class="photo photo2">
+                </div>
+                <img src="../images/mannequinChateau.jpg" class="photo photo3">
             </div>
-            <img src="../images/mannequinChateau.jpg" class="photo photo3">
             <div class="content">
                 <h1>Parade vénitienne</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae arcu id ultricies. Donec porttitor fringilla accumsan. Maecenas quis consectetur elit. Duis sit amet nulla in arcu tincidunt dictum lacinia eget nisl. Aliquam non suscipit ante. Nullam odio dui, scelerisque non tristique in, auctor sollicitudin magna. Nunc posuere viverra laoreet. Nam urna nisl, dignissim quis sem vitae, venenatis pretium justo. Curabitur non lacus mollis tortor viverra tempus. Nullam in pharetra leo. Etiam placerat ante in velit egestas vestibulum. Quisque eget finibus ante.</p>
@@ -62,10 +68,12 @@
                 <h1>Photographie</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae arcu id ultricies. Donec porttitor fringilla accumsan. Maecenas quis consectetur elit. Duis sit amet nulla in arcu tincidunt dictum lacinia eget nisl. Aliquam non suscipit ante. Nullam odio dui, scelerisque non tristique in, auctor sollicitudin magna. Nunc posuere viverra laoreet. Nam urna nisl, dignissim quis sem vitae, venenatis pretium justo. Curabitur non lacus mollis tortor viverra tempus. Nullam in pharetra leo. Etiam placerat ante in velit egestas vestibulum. Quisque eget finibus ante.</p>
             </div>
-            <img src="../images/lezard.JPG" class="photo photo3-right">
-            <div class="photos">
-                <img src="../images/montagne.JPG" class="photo photo1">
-                <img src="../images/jongleurFlamme.JPG" class="photo photo2-right">
+            <div class="photos-container">
+                <img src="../images/lezard.JPG" class="photo photo3-right">
+                <div class="photos">
+                    <img src="../images/montagne.JPG" class="photo photo1">
+                    <img src="../images/jongleurFlamme.JPG" class="photo photo2-right">
+                </div>
             </div>
         </section>
     </div>
