Page "Projets professionnels" rendue responsive. Modification de l'espace entre la barre de navigation et le corps de la page. Modification de la partie mail dans l'onglet "Contact".

--- a/html/contact.html
+++ b/html/contact.html
@@ -31,7 +31,7 @@
                 <p>Je suis à votre disposition pour toute question, projet ou collaboration.</p>
                 <ul>
                     <li><i class='bx bxs-phone'></i> +33 7 82 88 63 35</li>
-                    <li><a href="doriane.richard08@gmail.com"><i class='bx bxs-envelope'></i>doriane.richard08@gmail.com</li></a>
+                    <li><a href="mailto:doriane.richard08@gmail.com"><i class='bx bxs-envelope'></i>doriane.richard08@gmail.com</li></a>
                     <li><a href="https://www.linkedin.com/in/doriane-richard-313192207/"><i class="bx bxl-linkedin"></i>Doriane Richard</li></a>
                 </ul>
             </div>
