Changement du noms des fichiers "projetPersonnel" et "projetProfessionnel".

--- a/html/projetsProfessionnels.html
+++ b/html/projetsProfessionnels.html
@@ -10,8 +10,8 @@
         <nav class="navbar">
             <a href="../index.html">Accueil</a>
             <a href="../html/biographie.html">À propos</a>
-            <a href="../html/projetProfessionnel.html">Projet professionnel</a>
-            <a href="../html/projetPersonnel.html">Projet personnel</a>
+            <a href="../html/projetsProfessionnels.html">Projets professionnels</a>
+            <a href="../html/projetsPersonnels.html">Projets personnels</a>
             <a href="../html/contact.html">Contact</a>
             <a href="../html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
         </nav>
