--- a/html/enTete.html
+++ b/html/enTete.html
@@ -2,8 +2,8 @@
     <nav class="navbar">
         <a href="index.html" class="active">Accueil</a>
         <a href="html/biographie.html">A propos</a>
-        <a href="html/projetProfessionnel.html">Portfolio</a>
-        <a href="html/projetPersonnel.html">Projet personnel</a>
+        <a href="../html/projetsProfessionnels.html">Projets professionnels</a>
+        <a href="../html/projetsPersonnels.html">Projets personnels</a>
         <a href="html/contact.html">Contact</a>
     </nav>
 </header>
