Changement de chemin dans le fichier "index.html". Ajout de fonts et autres modifications mineures.

--- a/html/biographie.html
+++ b/html/biographie.html
@@ -57,18 +57,33 @@
             <ul class="timeline">
                 <li>
                     <h3>Alternante Software Design Technician</h3>
-                    <span>Schneider Electric, 2023-2024</span>
-                    <p>TODO : Ajouter une description + durée</p>
+                    <span>Schneider Electric, 2023-2024 (11 mois)</span>
+                    <p>Pour ma 3eme année de BUT, je suis restée dans le même groupe mais pas dans la même entité.
+                        Je suis rentrée dans une équipe d'une dizaine de développeurs travaillant avec la 
+                        méthode AGILE plus précisément SCRUM et KANBAN. J'aide au maintient et au développement 
+                        de l'application web de notre service. En parallèle, je suis cheffe de projet. 
+                        Ce projet consiste à piloter l'implémentation des normes d'accessibilité dans 
+                        l'application web EcoStruxure Control Engineering.
+                    </p>
                 </li>
                 <li>
                     <h3>Alternante en informatique industrielle et cybersécurité</h3>
-                    <span>Schneider Electric, 2021-2023</span>
-                    <p>TODO : Ajouter une description + durée</p>
+                    <span>Schneider Electric, 2021-2023 (23 mois)</span>
+                    <p>
+                        Mes missions consistaient à maintenir le parc informatique de l'usine 
+                        (résolutions de bugs, de problèmes de réseaux (Cisco), changements d'ordinateurs, …).
+                        Lors de ma deuxième année, j'ai proposé de développer une plateforme 
+                        permettant un accès rapide et sécurisée aux informations du parc informatique 
+                        et automatique de l'entité MasterTech.
+                    </p>
                 </li>
                 <li>
                     <h3>Employé de restaurant</h3>
-                    <span>Crescendo, 2021</span>
-                    <p>TODO : Ajouter une description + durée</p>
+                    <span>Crescendo, 2021 (2 mois)</span>
+                    <p>
+                        J'ai travaillé dans ce restaurant en tant que chargée des grillades et des entrées, 
+                        ainsi que soutient en cuisine.
+                    </p>
                 </li>
             </ul>
         </div>
