--- a/html/contact.html
+++ b/html/contact.html
@@ -22,7 +22,7 @@
         <div class="contact-content">
             <!-- Illustration -->
             <div class="contact-image">
-                <img src="../images/immeuble.jpg" alt="Image de contact">
+                <img src="../images/icones-contact.png" alt="Image de contact">
             </div>
             <!-- Informations -->
             <div class="contact-info">
