--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <nav class="navbar">
         <a href="index.html" class="active">Accueil</a>
         <a href="html/biographie.html">A propos</a>
-        <a href="html/projetProfessionnel.html">Projet professionnel</a>
-        <a href="html/projetPersonnel.html">Projet personnel</a>
+        <a href="html/projetsProfessionnels.html">Projets professionnels</a>
+        <a href="html/projetsPersonnels.html">Projets personnels</a>
         <a href="html/contact.html">Contact</a>
         <a href="html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
       </nav>
@@ -27,11 +27,11 @@
         <h1>Doriane Richard</h1>
         <h3>Software Design Technician, alias développeuse front-end</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Duis quis vestibulum urna, nec lobortis nulla. Suspendisse laoreet 
-          vel eros a tempus. Proin metus nibh, ultricies non semper id, iaculis pretium nisi. 
-          Praesent varius orci sit amet hendrerit pulvinar. Nunc enim odio, tempus tristique mauris ac, 
-          malesuada feugiat neque. Praesent feugiat iaculis laoreet. 
+          Bienvenu cher visiteur !
+          <br>
+          Ici vous pourrez bénéficier d'une vue sur une partie de ma personne. Qui suis-je ? Qu'ai-je
+          fait ? Qu'est-ce qui me passionne ? Quel est le numéro de mon téléphone cellulaire portatif ?
+          Vous le serez bien assez tôt en vous baladant sur ce merveilleux portfolio !
         </p>
       </div>
       <!-- Portrait -->
